# XGripper

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: libsurvive_coordinate_system.md
examples/: calibrate_gripper.py  calibrate_vive.py  flare_grip_example.py  raw_survive.py  remote_example.py  rerun_example.py  rerun_visualization_example.py  scan_sensors.py  scan_system.py  sensor_benchmark.py  test_gripper.py  test_lighthouse.py  vive_print_example.py  vive_visualization_example.py
utils/: __init__.py  general.py  spdlogger.py  system_utils.py  visualization.py
vive_tracker/: __init__.py  pose_utils.py  vive.py
xense_gripper/: __init__.py  xense_gripper.py
xensegripper/: __init__.py  __main__.py  serial_device.py  utils.py  xense_gripper.py
xensegripper/controller/: __init__.py  safe_close_control.py  safe_close_control_speed.py
xensegripper/node/: camera_client.py  camera_server.py  master_node.py  node_utils.py  xense_gripper_node.py  xense_sensor_node.py
xesne_gripper/: __init__.py  xense_gripper.py
xgripper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
